Add multiple clients via multithreading with the new Virtual Threads